fixed section featured projects and my thoughts plus left align other projects

--- a/code/style.css
+++ b/code/style.css
@@ -136,6 +136,17 @@ header {
   background-color: #f4f4f4;
 }
 
+.featured-projects-container,
+.my-thoughts-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.featured-project-wrapper img {
+  width: 100%;
+}
+
 .project-description span {
   font-weight: bold;
   color: #fa382f;
@@ -154,9 +165,17 @@ header {
   background-color: #f4f4f4;
 }
 
+.other-project-width {
+  width: 100%;
+}
+
 .other-projects h3 {
   color: #fa382f;
   background-color: #f4f4f4;
+}
+
+.my-thoughts-wrapper img {
+  width: 100%;
 }
 
 .my-thoughts-text span {
@@ -204,8 +223,24 @@ address {
     max-width: 700px;
   }
 
-  .featured-project-wrapper {
+  .featured-project-wrapper,
+  .my-thoughts-wrapper {
     max-width: 300px;
+  }
+}
+
+@media (min-width: 1023px) {
+  .main-wrapper {
+    padding: 100px 0px;
+  }
+
+  .content {
+    max-width: 900px;
+  }
+
+  .featured-project-wrapper,
+  .my-thoughts-wrapper {
+    max-width: 400px;
   }
 }
 
@@ -215,10 +250,11 @@ address {
   }
 
   .content {
-    max-width: 1088px;
+    max-width: 1100px;
   }
 
-  .featured-project-wrapper {
+  .featured-project-wrapper,
+  .my-thoughts-wrapper {
     max-width: 500px;
   }
 }
